--- a/SLKTheatres/.classpath
+++ b/SLKTheatres/.classpath
@@ -32,9 +32,6 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/chris/Documents/Revature/activation.jar"/>
-	<classpathentry kind="lib" path="C:/Users/chris/Documents/Revature/javax.mail-1.6.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/chris/Documents/Revature/mail.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -42,12 +39,15 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
+			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="m2e-apt" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/chris/Documents/2001jan27_gitbash/ProjectTwoUpdate/projecttwo/activation.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/chris/Documents/2001jan27_gitbash/ProjectTwoUpdate/projecttwo/javax.mail-1.6.2-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/chris/Documents/2001jan27_gitbash/ProjectTwoUpdate/projecttwo/mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
